--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -639,9 +639,9 @@ This has lead to claims that OWL 2 cannot be used for validation.
 There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL 2 should be used for RDF validation.
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
 
-
+\tb{we need a research domain example here}
 In practice, OWL 2 is well-spread and RDFS/OWL constructs is widely used to tell people and applications about how valid instances should be created.
-RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. Consider the following  DL knowledge base $\mathcal{K}$ :
+RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. Consider the following DL knowledge base \tb{Erman, please describe very briefly what a knowledge base is} $\mathcal{K}$ :
 \begin{center}
 \begin{DL} 
 $\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasAncestor.Person}, \\
@@ -660,14 +660,12 @@ The statement \ms{Jedi $\sqsubseteq \forall$ hasWeapon. JediWeapon } says \emph{
 If we express the mentioned constraints in OWL
 and apply a reasoner before the proper constraint validation is performed, we will not get a constraint violation  because implicit statements such as \emph{laser sword is a Jedi weapon} (i.e., \ms{JediWeapon(LaserSword)}) will be inferred. 
 
-\subsection{CWA vs. OWA in RDF Validation}
+%\subsection{CWA vs. OWA in RDF Validation}
 
-\tb{if we classify constraints according to CWA / OWA, we shift this section to subsection in next chapter}
+In OWL, we have the {\em non-unique name assumption (nUNA)} whereas RDF validation requires that different names represent different objects (also known as {\em unique name assumption (UNA)}). This ambiguity in semantics stands as one of the main reasons of why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
+OWL's semantics is based on the {\em open-world assumption (OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem. With the OWA, in the given knowledge base above, we infer that $\ms{Anakin}$ has an ancestor that is a $\ms{Person}$ (since Anakin is a person e.g.,\ms{Person(Anakin)}), but we do not know who exactly, and $\mathcal{K}$ is consistent. 
 
-Additionally, in OWL we have the non-unique name assumption (nUNA) whereas RDF validation requires that different names represent different objects (also known as unique name assumption (UNA)). This ambiguity in semantics stands as one of the main reasons of why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
-OWL's semantics is based on open-world assumption (OWA)  i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem. With the OWA, in the given knowledge base above, we infer that $\ms{Anakin}$ has an ancestor that is a $\ms{Person}$ (since Anakin is a person e.g.,\ms{Person(Anakin)}), but we do not know who exactly, and $\mathcal{K}$ is consistent. 
-
-On the other hand, many RDF validation scenario requires the closed-world assumption (CWA) (i.e., a statement is inferred to be false if it cannot be proved to be true), therefore  classical constraint languages are based on CWA where  the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. This would be a shortcoming of OWA in RDF validation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. 
+On the other hand, many RDF validation scenarios require the {\em closed-world assumption (CWA)} (i.e., a statement is inferred to be false if it cannot be proved to be true), therefore  classical constraint languages are based on CWA where  the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. This would be a shortcoming of OWA in RDF validation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. 
 
 \subsection{Expressivity and Complexity in OWL 2}
 \label{Expressivity-Complexity-OWL2}
@@ -730,28 +728,32 @@ In this section, we show how to determine the performance (the computational com
 
 \subsection{Semantics}
 
-\tb{just inserted Christain's feedback so far}
+We classify constraints according to the dependency on the CWA and UNA:
+\begin{enumerate}
+	\item $\mathcal{C}_{CWA}$: CWA and UNA dependent constraint types
+	\item $\overline{\mathcal{C}_{CWA}}$: CWA and UNA independent constraint types
+\end{enumerate}
 
-classification of constraints according to CWA and UNA
-- CWA dependent constrains
-- CWA independent constraints
------
+The UNA and CWA are important aspects
 
-The UNA and CWA are important aspects, however, in Section 4 nd 5
-they are not used anymore. I would expect that a constraint type can be
+I would expect that a constraint type can be
 independent of the CWA or it can make a difference. For example:
 
 ex1: An address is a field that stores a string and its end is substring
 that refers to a number.
+
 ex2: If someone is a mother, she has at least one child.
+
 ex3: If someone is a women, it cannot be a man.
 
 ex1 has nothing to do with CWA or UNA, if you accept the CWA or its
 opposite, it doe not nmake a difference here.
+
 ex2 depends on CWA, in the CWA setting a mother without an explictly
 stated child violates the constraint. In OWA its different, the mother
 withour explicitly stated child is not a problem. You just have an axiom
 that allows you to entail that there is an (unknown) child.
+
 ex3 again independent of CWA.
 
 I was really wondering how many of the 74 patterns are independent and
