--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -252,19 +252,18 @@ in order to show that each constraint can be mapped to an ontology describing RD
 The W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
 where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and validation.
 In 2014, two working groups on RDF validation have been established: 
-the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
-
-Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of requirements to formulate and validate RDF constraints
-which is available for contribution at \url{http://purl.org/net/rdf-validation}.
+the W3C RDF Data Shapes\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles working groups\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
+Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of requirements to formulate and validate RDF constraints.
+The database is available for contribution at \url{http://purl.org/net/rdf-validation}.
 The intention associated with this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
 The requirements are classified to better evaluate existing solutions. 
-We mapped each requirement to formulate RDF constraints directly to an RDF constraint.
+We mapped each requirement to formulate RDF constraints directly to an RDF constraint type.
 
 A \ms{constraint language} is a language which is used to formulate constraints.
 The W3C Data Shapes working group defines \ms{constraint} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
 There is no constraint language which can be seen as the standalone standard.
 However, there are multiple constraint languages (each having its own  syntax and semantics) which can be used to express RDF constraints, such as existential and universal quantification, cardinality restrictions, and exclusive-or of properties.
-The five popular constraint languages are 
+The five most popular constraint languages are 
 Description Set Profiles (DSP)\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
 Resource Shapes (ReSh)\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
 Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/}},
@@ -272,9 +271,9 @@ the SPARQL Inferencing Notation (SPIN)\footnote{\url{http://spinrdf.org/}},
 and the Web Ontology Language (OWL 2)\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}.
 
 
-In this paper, we describe each requirement within the RDF validation requirements database in detail (sections 3-76).
+In this paper, we describe each requirement within the RDF validation requirements database in detail (sections 2-75).
 Additional descriptions can be found directly in the database.
-Each requirement corresponds to an RDF constraint which may be expressible by multiple constraint languages.
+Each requirement corresponds to an RDF constraint type which may be expressible by multiple constraint languages.
 For each requirement, we represent some examples in different constraint languages.
 
 We evaluated to which extend the most promising five constraint languages fulfill each of the overall 74 requirements to formulate RDF constraints (section \ref{sec:evaluation-1}).
@@ -282,9 +281,6 @@ We distinguished if a constraint is fulfilled by OWL 2 QL or if the more express
 We also take reasoning into account, as reasoning may be performed prior to validating constraints.
 
 In order to define an ontology to describe RDF constraints generically, it is needed to define the terminology for the formulation of RDF constraints and to classify them. 
-
-
-
 We identified four dimensions to classify constraints:
 \begin{itemize}
   \item \ms{Universality:} specific constraints vs. generic constraints
@@ -295,7 +291,7 @@ We identified four dimensions to classify constraints:
 
 As there are already five promising constraint languages, our purpose is not to invent a new constraint language.
 We rather developed a very simple ontology (only three classes, three object properties, and three data properties) which is universal enough to describe any RDF constraint expressible by any RDF constraint language.
-We call this ontology the \ms{RDF constraints ontology (RDF-CO)}\footnote{Available at: \url{https://github.com/boschthomas/RDF-constraints-ontology}}.
+We call this ontology the \ms{RDF constraints ontology (RDF-CO)}\footnote{Available at: \url{https://github.com/boschthomas/RDF-CO}}.
 
 \ms{Specific constraints} are expressed by specific constraint languages like DSP, OWL 2, ReSh, ShEx, and SPIN.
 \ms{Generic constraints} are expressed by the RDF-CO.
