--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -740,8 +740,8 @@ We classify constraint types according to the dependency on CWA and UNA:
 $\mathcal{C}_{CWA}$ contains constraint types for which it makes a difference if CWA/UNA or OWA/nUNA are assumed.
 If something is a publication, e.g., it has at least one author (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}).
 This {\em qualified cardinality restriction} depends on CWA/UNA.
-In an CWA/UNA setting, a publication without an explicitly stated author violates the constraint  
-Assuming OWA/nUNA it's different, 
+In a CWA/UNA setting, a publication without an explicitly stated author violates this constraint.  
+With OWA/nUNA semantics, however,
 the publication without an explicitly stated author does not raise a constraint violation, 
 as the axiom allows you to entail that there must be an (unknown) author.
 
