--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -746,24 +746,12 @@ the publication without an explicitly stated author does not raise a constraint 
 as the axiom allows you to entail that there must be an (unknown) author.
 
 $\overline{\mathcal{C}_{CWA}}$ includes constraint types for which it does not make any difference if CWA/UNA or OWA/nUNA are assumed.
-example...
+If something is a book, e.g., it cannot be a journal article (\ms{Male $\sqcap$ Female $\sqsubseteq$ $\perp$}).
+For this {\em disjoint classes} constraint, It does not make any difference if the semantics CWA/UNA or OWA/nUNA is taken,
+as all information needed to validate this constraint is explicitly available in both cases. 
 
-
-
-ex1: An address is a field that stores a string and its end is substring
-that refers to a number.
-
-
-
-ex3: If someone is a women, it cannot be a man.
-ex3: If something is a book, it cannot be a journal article (\ms{Male $\sqcap$ Female $\sqsubseteq$ $\perp$}) ({\em disjoint classes})
-
-ex1 has nothing to do with CWA or UNA, if you accept the CWA or its
-opposite, it doe not nmake a difference here.
-
-
-
-ex3 again independent of CWA.
+%ex1: An address is a field that stores a string and its end is substring
+%that refers to a number.
 
 I was really wondering how many of the 74 patterns are independent and
 how many are dependent? Note that you can give a very clear definition
