--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -265,7 +265,7 @@ Requirements are classified to provide a high-level view on different solutions 
 
 % RDF validation in the library domain
 % -----
-Rdf validation gained speed as a research field in recent years, as a result of a common need.  For instance, libraries are used to publish data in form of XML documents for a long time.
+Rdf validation gained speed as a research field in recent years, as a result of common needs.  For instance, libraries are used to publish data in form of XML documents for a long time.
 They model and validate data using quite complex and very detailed XML Schemas, DTDs, RELAX NG, or Schematron.
 Recently, libraries started to publish RDF data sets, since libraries have many use cases which are met by Semantic Web technologies and Linked Data. 
 A library wants to publish some data sets as RDF by extracting them from different relational databases. 
