--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -733,7 +733,7 @@ In this section, we show how to determine the performance (the computational com
 \end{enumerate}
 
 \subsection{Semantics}
-
+\tb{Erman, can you please verify this sub chapter? Does this make sense?}
 The distinction of constraint types regarding the dependency on CWA and UNA is an important aspect when combining reasoning with validation,
 as OWL reasoning requires {\em OWA} and {\em nUNA} and RDF validation is based on {\em UNA} (different names represent different objects) and
 {\em CWA} (a statement is inferred to be false if it cannot be proved to be true).
@@ -744,6 +744,9 @@ We classify constraint types according to the dependency on CWA and UNA:
 \end{enumerate}
 
 $\mathcal{C}_{CWA}$ contains constraint types for which it makes a difference if CWA/UNA or OWA/nUNA are assumed.
+$\mathcal{C}_{CWA}$ is defined as follows:
+For a given constraint type, if there exists no RDF data set that would be inconsistent under CWA/UNA and
+consistent under OWA/nUNA, then the constraint type is dependent of CWA/UNA.
 If something is a publication, e.g., it has at least one author (\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}).
 This {\em qualified cardinality restriction} depends on CWA/UNA.
 In a CWA/UNA setting, a publication without an explicitly stated author violates this constraint.  
@@ -752,19 +755,17 @@ the publication without an explicitly stated author does not raise a constraint 
 as the axiom allows you to entail that there must be an (unknown) author.
 
 $\overline{\mathcal{C}_{CWA}}$ includes constraint types for which it does not make any difference if CWA/UNA or OWA/nUNA are assumed.
-If something is a book, e.g., it cannot be a journal article (\ms{Male $\sqcap$ Female $\sqsubseteq$ $\perp$}).
-For this {\em disjoint classes} constraint, It does not make any difference if the semantics CWA/UNA or OWA/nUNA is taken,
-as all information needed to validate this constraint is explicitly available in both cases. 
+$\mathcal{C}_{CWA}$ is defined as follows:
+For a given constraint type, if there exists no RDF data set that would be consistent/inconsistent under CWA/UNA and
+consistent/inconsistent under OWA/nUNA, then the constraint type is independent of CWA/UNA.
+If something is a book, e.g., it cannot be a journal article (\ms{Book $\sqcap$ JournalArticle $\sqsubseteq$ $\perp$}).
+For this {\em disjoint classes} constraint, it does not make any difference if the semantics CWA/UNA or OWA/nUNA is taken,
+as all information needed for validation is explicitly available in both cases. 
 
 %ex1: An address is a field that stores a string and its end is substring
 %that refers to a number.
 
-I was really wondering how many of the 74 patterns are independent and
-how many are dependent? Note that you can give a very clear definition
-what independent means. You can say, For a given constraint, if there
-exist not RDF dataset that would be inconsistent under CWA and
-consistent under OWA or vice versa, then the constraint is independent
-of the CWA.
+\tb{ToDO: evaluation}
 
 \subsection{Reasoning}
 
